--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="calculator">
         <h1 class="header">Javascript Calculator</h1>
-        <input id="total" class="total" type="text" value="0" >
+        <input id="total" class="total" type="text" value="0" readonly>
         <button class="operator" style="margin-right: 10px">/</button>
         <button class="operator" style="margin-right: 10px">x</button>
         <button class="delete">DEL</button>
